Point 1 is complete. Reference was added

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -161,7 +161,7 @@
 	\begin{figure}
 		\centering
 		\includegraphics[width=1\linewidth]{ASI_EKFprinciple}
-		\caption{A complete picture of the operation of the extended Kalman filter.}
+		\caption{A complete picture of the operation of the extended Kalman filter\autocite{welch2002kalman}.}
 		\label{fig:ekfprinciple}
 	\end{figure}
 	
@@ -363,6 +363,7 @@
 	
 	I will add it later, just wanted to see if there is anything to correct before the final submission
 	
+	\printbibliography
 	\newpage
 	\appendix
 	\section{Code}
